--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" href="./css/application.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="./js/player.js"></script>
+    <script src="./js/logic.js"></script>
   <script src="./js/board.js"></script>
   <script src="./js/boardController.js"></script>
   <script src="./js/application.js"></script>
