--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="hiScoreApp">
+<html lang="en">
 <head>
   <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/application.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="./js/player.js"></script>
-    <script src="./js/logic.js"></script>
+    <script src="./js/game.js"></script>
   <script src="./js/board.js"></script>
   <script src="./js/boardController.js"></script>
   <script src="./js/application.js"></script>
