All win states covered

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     See: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.5.0/sweet-alert.css">
 
   <link rel="stylesheet" href="./css/application.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.5.0/sweet-alert.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="./js/player.js"></script>
     <script src="./js/game.js"></script>
